# s2-indices

./: Dockerfile  dask.yaml  pyproject.toml
.github/workflows/: main.yml
indices_compute/: __inti__.py  indices.py  utils.py
